Fix the links to the operations

--- a/_includes/menu-amazon-dynamodb.html
+++ b/_includes/menu-amazon-dynamodb.html
@@ -1,44 +1,44 @@
   <li><a href="/amazon/">&laquo; back</a></li>
   <li class="tab-amazon-dynamodb nav-header">Amazon DynamoDB</li>
   <li class="tab-amazon-dynamodb-batch-get-items">
-    <a href="/amazon/dynamodb/BatchGetItems.html">BatchGetItems</a>
+    <a href="/amazon/dynamodb/batch-get-items.html">BatchGetItems</a>
   </li>
   <li class="tab-amazon-dynamodb-batch-write-item">
-    <a href="/amazon/dynamodb/BatchWriteItem.html">BatchWriteItem</a>
+    <a href="/amazon/dynamodb/batch-write-item.html">BatchWriteItem</a>
   </li>
   <li class="tab-amazon-dynamodb-create-table">
-    <a href="/amazon/dynamodb/CreateTable.html">CreateTable</a>
+    <a href="/amazon/dynamodb/create-table.html">CreateTable</a>
   </li>
   <li class="tab-amazon-dynamodb-delete-item">
-    <a href="/amazon/dynamodb/DeleteItem.html">DeleteItem</a>
+    <a href="/amazon/dynamodb/delete-item.html">DeleteItem</a>
   </li>
   <li class="tab-amazon-dynamodb-delete-table">
-    <a href="/amazon/dynamodb/DeleteTable.html">DeleteTable</a>
+    <a href="/amazon/dynamodb/delete-table.html">DeleteTable</a>
   </li>
   <li class="tab-amazon-dynamodb-describe-table">
-    <a href="/amazon/dynamodb/DescribeTable.html">DescribeTable</a>
+    <a href="/amazon/dynamodb/describe-table.html">DescribeTable</a>
   </li>
   <li class="tab-amazon-dynamodb-get-item">
-    <a href="/amazon/dynamodb/GetItem.html">GetItem</a>
+    <a href="/amazon/dynamodb/get-item.html">GetItem</a>
   </li>
   <li class="tab-amazon-dynamodb-list-tables">
-    <a href="/amazon/dynamodb/ListTables.html">ListTables</a>
+    <a href="/amazon/dynamodb/list-tables.html">ListTables</a>
   </li>
   <li class="tab-amazon-dynamodb-put-item">
-    <a href="/amazon/dynamodb/PutItem.html">PutItem</a>
+    <a href="/amazon/dynamodb/put-item.html">PutItem</a>
   </li>
   <li class="tab-amazon-dynamodb-query">
-    <a href="/amazon/dynamodb/Query.html">Query</a>
+    <a href="/amazon/dynamodb/query.html">Query</a>
   </li>
   <li class="tab-amazon-dynamodb-scan">
-    <a href="/amazon/dynamodb/Scan.html">Scan</a>
+    <a href="/amazon/dynamodb/scan.html">Scan</a>
   </li>
   <li class="tab-amazon-dynamodb-update-item">
-    <a href="/amazon/dynamodb/UpdateItem.html">UpdateItem</a>
+    <a href="/amazon/dynamodb/update-item.html">UpdateItem</a>
   </li>
   <li class="tab-amazon-dynamodb-update-table">
-    <a href="/amazon/dynamodb/UpdateTable.html">UpdateTable</a>
+    <a href="/amazon/dynamodb/update-table.html">UpdateTable</a>
   </li>
   <li class="tab-amazon-dynamodb-rl">
-    <a href="/amazon/dynamodb/url.html">url</a>
+    <a href="/amazon/dynamodb/rl.html">url</a>
   </li>
