--- a/_includes/menu-amazon-emr.html
+++ b/_includes/menu-amazon-emr.html
@@ -1,23 +1,23 @@
   <li><a href="/amazon/">&laquo; back</a></li>
   <li class="tab-amazon-emr nav-header">Amazon EMR</li>
   <li class="tab-amazon-emr-add-instance-groups">
-    <a href="/amazon/emr/AddInstanceGroups.html">AddInstanceGroups</a>
+    <a href="/amazon/emr/add-instance-groups.html">AddInstanceGroups</a>
   </li>
   <li class="tab-amazon-emr-add-job-flow-steps">
-    <a href="/amazon/emr/AddJobFlowSteps.html">AddJobFlowSteps</a>
+    <a href="/amazon/emr/add-job-flow-steps.html">AddJobFlowSteps</a>
   </li>
   <li class="tab-amazon-emr-describe-job-flows">
-    <a href="/amazon/emr/DescribeJobFlows.html">DescribeJobFlows</a>
+    <a href="/amazon/emr/describe-job-flows.html">DescribeJobFlows</a>
   </li>
   <li class="tab-amazon-emr-modify-instance-groups">
-    <a href="/amazon/emr/ModifyInstanceGroups.html">ModifyInstanceGroups</a>
+    <a href="/amazon/emr/modify-instance-groups.html">ModifyInstanceGroups</a>
   </li>
   <li class="tab-amazon-emr-run-job-flow">
-    <a href="/amazon/emr/RunJobFlow.html">RunJobFlow</a>
+    <a href="/amazon/emr/run-job-flow.html">RunJobFlow</a>
   </li>
   <li class="tab-amazon-emr-set-termination-protection">
-    <a href="/amazon/emr/SetTerminationProtection.html">SetTerminationProtection</a>
+    <a href="/amazon/emr/set-termination-protection.html">SetTerminationProtection</a>
   </li>
   <li class="tab-amazon-emr-terminate-job-flows">
-    <a href="/amazon/emr/TerminateJobFlows.html">TerminateJobFlows</a>
+    <a href="/amazon/emr/terminate-job-flows.html">TerminateJobFlows</a>
   </li>
