--- a/_includes/menu-amazon-fps.html
+++ b/_includes/menu-amazon-fps.html
@@ -1,68 +1,68 @@
   <li><a href="/amazon/">&laquo; back</a></li>
   <li class="tab-amazon-fps nav-header">Amazon FPS</li>
   <li class="tab-amazon-fps-cancel">
-    <a href="/amazon/fps/Cancel.html">Cancel</a>
+    <a href="/amazon/fps/cancel.html">Cancel</a>
   </li>
   <li class="tab-amazon-fps-cancel-token">
-    <a href="/amazon/fps/CancelToken.html">CancelToken</a>
+    <a href="/amazon/fps/cancel-token.html">CancelToken</a>
   </li>
   <li class="tab-amazon-fps-fund-prepaid">
-    <a href="/amazon/fps/FundPrepaid.html">FundPrepaid</a>
+    <a href="/amazon/fps/fund-prepaid.html">FundPrepaid</a>
   </li>
   <li class="tab-amazon-fps-get-account-activity">
-    <a href="/amazon/fps/GetAccountActivity.html">GetAccountActivity</a>
+    <a href="/amazon/fps/get-account-activity.html">GetAccountActivity</a>
   </li>
   <li class="tab-amazon-fps-get-account-balance">
-    <a href="/amazon/fps/GetAccountBalance.html">GetAccountBalance</a>
+    <a href="/amazon/fps/get-account-balance.html">GetAccountBalance</a>
   </li>
   <li class="tab-amazon-fps-get-debt-balance">
-    <a href="/amazon/fps/GetDebtBalance.html">GetDebtBalance</a>
+    <a href="/amazon/fps/get-debt-balance.html">GetDebtBalance</a>
   </li>
   <li class="tab-amazon-fps-get-outstanding-debt-balance">
-    <a href="/amazon/fps/GetOutstandingDebtBalance.html">GetOutstandingDebtBalance</a>
+    <a href="/amazon/fps/get-outstanding-debt-balance.html">GetOutstandingDebtBalance</a>
   </li>
   <li class="tab-amazon-fps-get-prepaid-debt-balance">
-    <a href="/amazon/fps/GetPrepaidDebtBalance.html">GetPrepaidDebtBalance</a>
+    <a href="/amazon/fps/get-prepaid-debt-balance.html">GetPrepaidDebtBalance</a>
   </li>
   <li class="tab-amazon-fps-get-recipient-verification-status">
-    <a href="/amazon/fps/GetRecipientVerificationStatus.html">GetRecipientVerificationStatus</a>
+    <a href="/amazon/fps/get-recipient-verification-status.html">GetRecipientVerificationStatus</a>
   </li>
   <li class="tab-amazon-fps-get-token-usage">
-    <a href="/amazon/fps/GetTokenUsage.html">GetTokenUsage</a>
+    <a href="/amazon/fps/get-token-usage.html">GetTokenUsage</a>
   </li>
   <li class="tab-amazon-fps-get-tokens">
-    <a href="/amazon/fps/GetTokens.html">GetTokens</a>
+    <a href="/amazon/fps/get-tokens.html">GetTokens</a>
   </li>
   <li class="tab-amazon-fps-get-tokens-by-caller">
-    <a href="/amazon/fps/GetTokensByCaller.html">GetTokensByCaller</a>
+    <a href="/amazon/fps/get-tokens-by-caller.html">GetTokensByCaller</a>
   </li>
   <li class="tab-amazon-fps-get-total-prepaid-liability">
-    <a href="/amazon/fps/GetTotalPrepaidLiability.html">GetTotalPrepaidLiability</a>
+    <a href="/amazon/fps/get-total-prepaid-liability.html">GetTotalPrepaidLiability</a>
   </li>
   <li class="tab-amazon-fps-get-transaction">
-    <a href="/amazon/fps/GetTransaction.html">GetTransaction</a>
+    <a href="/amazon/fps/get-transaction.html">GetTransaction</a>
   </li>
   <li class="tab-amazon-fps-get-transaction-status">
-    <a href="/amazon/fps/GetTransactionStatus.html">GetTransactionStatus</a>
+    <a href="/amazon/fps/get-transaction-status.html">GetTransactionStatus</a>
   </li>
   <li class="tab-amazon-fps-pay">
-    <a href="/amazon/fps/Pay.html">Pay</a>
+    <a href="/amazon/fps/pay.html">Pay</a>
   </li>
   <li class="tab-amazon-fps-refund">
-    <a href="/amazon/fps/Refund.html">Refund</a>
+    <a href="/amazon/fps/refund.html">Refund</a>
   </li>
   <li class="tab-amazon-fps-reserve">
-    <a href="/amazon/fps/Reserve.html">Reserve</a>
+    <a href="/amazon/fps/reserve.html">Reserve</a>
   </li>
   <li class="tab-amazon-fps-settle">
-    <a href="/amazon/fps/Settle.html">Settle</a>
+    <a href="/amazon/fps/settle.html">Settle</a>
   </li>
   <li class="tab-amazon-fps-settle-debt">
-    <a href="/amazon/fps/SettleDebt.html">SettleDebt</a>
+    <a href="/amazon/fps/settle-debt.html">SettleDebt</a>
   </li>
   <li class="tab-amazon-fps-verify-signature">
-    <a href="/amazon/fps/VerifySignature.html">VerifySignature</a>
+    <a href="/amazon/fps/verify-signature.html">VerifySignature</a>
   </li>
   <li class="tab-amazon-fps-write-off-debt">
-    <a href="/amazon/fps/WriteOffDebt.html">WriteOffDebt</a>
+    <a href="/amazon/fps/write-off-debt.html">WriteOffDebt</a>
   </li>
