--- a/_includes/menu-amazon-iam.html
+++ b/_includes/menu-amazon-iam.html
@@ -1,209 +1,209 @@
   <li><a href="/amazon/">&laquo; back</a></li>
   <li class="tab-amazon-iam nav-header">Amazon IAM</li>
   <li class="tab-amazon-iam-add-role-to-instance-profile">
-    <a href="/amazon/iam/AddRoleToInstanceProfile.html">AddRoleToInstanceProfile</a>
+    <a href="/amazon/iam/add-role-to-instance-profile.html">AddRoleToInstanceProfile</a>
   </li>
   <li class="tab-amazon-iam-add-user-to-group">
-    <a href="/amazon/iam/AddUserToGroup.html">AddUserToGroup</a>
+    <a href="/amazon/iam/add-user-to-group.html">AddUserToGroup</a>
   </li>
   <li class="tab-amazon-iam-change-password">
-    <a href="/amazon/iam/ChangePassword.html">ChangePassword</a>
+    <a href="/amazon/iam/change-password.html">ChangePassword</a>
   </li>
   <li class="tab-amazon-iam-create-access-key">
-    <a href="/amazon/iam/CreateAccessKey.html">CreateAccessKey</a>
+    <a href="/amazon/iam/create-access-key.html">CreateAccessKey</a>
   </li>
   <li class="tab-amazon-iam-create-account-alias">
-    <a href="/amazon/iam/CreateAccountAlias.html">CreateAccountAlias</a>
+    <a href="/amazon/iam/create-account-alias.html">CreateAccountAlias</a>
   </li>
   <li class="tab-amazon-iam-create-group">
-    <a href="/amazon/iam/CreateGroup.html">CreateGroup</a>
+    <a href="/amazon/iam/create-group.html">CreateGroup</a>
   </li>
   <li class="tab-amazon-iam-create-instance-profile">
-    <a href="/amazon/iam/CreateInstanceProfile.html">CreateInstanceProfile</a>
+    <a href="/amazon/iam/create-instance-profile.html">CreateInstanceProfile</a>
   </li>
   <li class="tab-amazon-iam-create-login-profile">
-    <a href="/amazon/iam/CreateLoginProfile.html">CreateLoginProfile</a>
+    <a href="/amazon/iam/create-login-profile.html">CreateLoginProfile</a>
   </li>
   <li class="tab-amazon-iam-create-role">
-    <a href="/amazon/iam/CreateRole.html">CreateRole</a>
+    <a href="/amazon/iam/create-role.html">CreateRole</a>
   </li>
   <li class="tab-amazon-iam-create-user">
-    <a href="/amazon/iam/CreateUser.html">CreateUser</a>
+    <a href="/amazon/iam/create-user.html">CreateUser</a>
   </li>
   <li class="tab-amazon-iam-create-virtual-m-f-a-device">
-    <a href="/amazon/iam/CreateVirtualMFADevice.html">CreateVirtualMFADevice</a>
+    <a href="/amazon/iam/create-virtual-m-f-a-device.html">CreateVirtualMFADevice</a>
   </li>
   <li class="tab-amazon-iam-deactivate-m-f-a-device">
-    <a href="/amazon/iam/DeactivateMFADevice.html">DeactivateMFADevice</a>
+    <a href="/amazon/iam/deactivate-m-f-a-device.html">DeactivateMFADevice</a>
   </li>
   <li class="tab-amazon-iam-delete-access-key">
-    <a href="/amazon/iam/DeleteAccessKey.html">DeleteAccessKey</a>
+    <a href="/amazon/iam/delete-access-key.html">DeleteAccessKey</a>
   </li>
   <li class="tab-amazon-iam-delete-account-alias">
-    <a href="/amazon/iam/DeleteAccountAlias.html">DeleteAccountAlias</a>
+    <a href="/amazon/iam/delete-account-alias.html">DeleteAccountAlias</a>
   </li>
   <li class="tab-amazon-iam-delete-account-password-policy">
-    <a href="/amazon/iam/DeleteAccountPasswordPolicy.html">DeleteAccountPasswordPolicy</a>
+    <a href="/amazon/iam/delete-account-password-policy.html">DeleteAccountPasswordPolicy</a>
   </li>
   <li class="tab-amazon-iam-delete-group">
-    <a href="/amazon/iam/DeleteGroup.html">DeleteGroup</a>
+    <a href="/amazon/iam/delete-group.html">DeleteGroup</a>
   </li>
   <li class="tab-amazon-iam-delete-group-policy">
-    <a href="/amazon/iam/DeleteGroupPolicy.html">DeleteGroupPolicy</a>
+    <a href="/amazon/iam/delete-group-policy.html">DeleteGroupPolicy</a>
   </li>
   <li class="tab-amazon-iam-delete-instance-profile">
-    <a href="/amazon/iam/DeleteInstanceProfile.html">DeleteInstanceProfile</a>
+    <a href="/amazon/iam/delete-instance-profile.html">DeleteInstanceProfile</a>
   </li>
   <li class="tab-amazon-iam-delete-login-profile">
-    <a href="/amazon/iam/DeleteLoginProfile.html">DeleteLoginProfile</a>
+    <a href="/amazon/iam/delete-login-profile.html">DeleteLoginProfile</a>
   </li>
   <li class="tab-amazon-iam-delete-role">
-    <a href="/amazon/iam/DeleteRole.html">DeleteRole</a>
+    <a href="/amazon/iam/delete-role.html">DeleteRole</a>
   </li>
   <li class="tab-amazon-iam-delete-role-policy">
-    <a href="/amazon/iam/DeleteRolePolicy.html">DeleteRolePolicy</a>
+    <a href="/amazon/iam/delete-role-policy.html">DeleteRolePolicy</a>
   </li>
   <li class="tab-amazon-iam-delete-server-certificate">
-    <a href="/amazon/iam/DeleteServerCertificate.html">DeleteServerCertificate</a>
+    <a href="/amazon/iam/delete-server-certificate.html">DeleteServerCertificate</a>
   </li>
   <li class="tab-amazon-iam-delete-signing-certificate">
-    <a href="/amazon/iam/DeleteSigningCertificate.html">DeleteSigningCertificate</a>
+    <a href="/amazon/iam/delete-signing-certificate.html">DeleteSigningCertificate</a>
   </li>
   <li class="tab-amazon-iam-delete-user">
-    <a href="/amazon/iam/DeleteUser.html">DeleteUser</a>
+    <a href="/amazon/iam/delete-user.html">DeleteUser</a>
   </li>
   <li class="tab-amazon-iam-delete-user-policy">
-    <a href="/amazon/iam/DeleteUserPolicy.html">DeleteUserPolicy</a>
+    <a href="/amazon/iam/delete-user-policy.html">DeleteUserPolicy</a>
   </li>
   <li class="tab-amazon-iam-delete-virtual-m-f-a-device">
-    <a href="/amazon/iam/DeleteVirtualMFADevice.html">DeleteVirtualMFADevice</a>
+    <a href="/amazon/iam/delete-virtual-m-f-a-device.html">DeleteVirtualMFADevice</a>
   </li>
   <li class="tab-amazon-iam-enable-m-f-a-device">
-    <a href="/amazon/iam/EnableMFADevice.html">EnableMFADevice</a>
+    <a href="/amazon/iam/enable-m-f-a-device.html">EnableMFADevice</a>
   </li>
   <li class="tab-amazon-iam-get-account-password-policy">
-    <a href="/amazon/iam/GetAccountPasswordPolicy.html">GetAccountPasswordPolicy</a>
+    <a href="/amazon/iam/get-account-password-policy.html">GetAccountPasswordPolicy</a>
   </li>
   <li class="tab-amazon-iam-get-account-summary">
-    <a href="/amazon/iam/GetAccountSummary.html">GetAccountSummary</a>
+    <a href="/amazon/iam/get-account-summary.html">GetAccountSummary</a>
   </li>
   <li class="tab-amazon-iam-get-group">
-    <a href="/amazon/iam/GetGroup.html">GetGroup</a>
+    <a href="/amazon/iam/get-group.html">GetGroup</a>
   </li>
   <li class="tab-amazon-iam-get-group-policy">
-    <a href="/amazon/iam/GetGroupPolicy.html">GetGroupPolicy</a>
+    <a href="/amazon/iam/get-group-policy.html">GetGroupPolicy</a>
   </li>
   <li class="tab-amazon-iam-get-instance-profile">
-    <a href="/amazon/iam/GetInstanceProfile.html">GetInstanceProfile</a>
+    <a href="/amazon/iam/get-instance-profile.html">GetInstanceProfile</a>
   </li>
   <li class="tab-amazon-iam-get-login-profile">
-    <a href="/amazon/iam/GetLoginProfile.html">GetLoginProfile</a>
+    <a href="/amazon/iam/get-login-profile.html">GetLoginProfile</a>
   </li>
   <li class="tab-amazon-iam-get-role">
-    <a href="/amazon/iam/GetRole.html">GetRole</a>
+    <a href="/amazon/iam/get-role.html">GetRole</a>
   </li>
   <li class="tab-amazon-iam-get-role-policy">
-    <a href="/amazon/iam/GetRolePolicy.html">GetRolePolicy</a>
+    <a href="/amazon/iam/get-role-policy.html">GetRolePolicy</a>
   </li>
   <li class="tab-amazon-iam-get-server-certificate">
-    <a href="/amazon/iam/GetServerCertificate.html">GetServerCertificate</a>
+    <a href="/amazon/iam/get-server-certificate.html">GetServerCertificate</a>
   </li>
   <li class="tab-amazon-iam-get-user">
-    <a href="/amazon/iam/GetUser.html">GetUser</a>
+    <a href="/amazon/iam/get-user.html">GetUser</a>
   </li>
   <li class="tab-amazon-iam-get-user-policy">
-    <a href="/amazon/iam/GetUserPolicy.html">GetUserPolicy</a>
+    <a href="/amazon/iam/get-user-policy.html">GetUserPolicy</a>
   </li>
   <li class="tab-amazon-iam-list-access-keys">
-    <a href="/amazon/iam/ListAccessKeys.html">ListAccessKeys</a>
+    <a href="/amazon/iam/list-access-keys.html">ListAccessKeys</a>
   </li>
   <li class="tab-amazon-iam-list-account-aliases">
-    <a href="/amazon/iam/ListAccountAliases.html">ListAccountAliases</a>
+    <a href="/amazon/iam/list-account-aliases.html">ListAccountAliases</a>
   </li>
   <li class="tab-amazon-iam-list-group-policies">
-    <a href="/amazon/iam/ListGroupPolicies.html">ListGroupPolicies</a>
+    <a href="/amazon/iam/list-group-policies.html">ListGroupPolicies</a>
   </li>
   <li class="tab-amazon-iam-list-groups">
-    <a href="/amazon/iam/ListGroups.html">ListGroups</a>
+    <a href="/amazon/iam/list-groups.html">ListGroups</a>
   </li>
   <li class="tab-amazon-iam-list-groups-for-user">
-    <a href="/amazon/iam/ListGroupsForUser.html">ListGroupsForUser</a>
+    <a href="/amazon/iam/list-groups-for-user.html">ListGroupsForUser</a>
   </li>
   <li class="tab-amazon-iam-list-instance-profiles">
-    <a href="/amazon/iam/ListInstanceProfiles.html">ListInstanceProfiles</a>
+    <a href="/amazon/iam/list-instance-profiles.html">ListInstanceProfiles</a>
   </li>
   <li class="tab-amazon-iam-list-instance-profiles-for-role">
-    <a href="/amazon/iam/ListInstanceProfilesForRole.html">ListInstanceProfilesForRole</a>
+    <a href="/amazon/iam/list-instance-profiles-for-role.html">ListInstanceProfilesForRole</a>
   </li>
   <li class="tab-amazon-iam-list-m-f-a-devices">
-    <a href="/amazon/iam/ListMFADevices.html">ListMFADevices</a>
+    <a href="/amazon/iam/list-m-f-a-devices.html">ListMFADevices</a>
   </li>
   <li class="tab-amazon-iam-list-role-policies">
-    <a href="/amazon/iam/ListRolePolicies.html">ListRolePolicies</a>
+    <a href="/amazon/iam/list-role-policies.html">ListRolePolicies</a>
   </li>
   <li class="tab-amazon-iam-list-roles">
-    <a href="/amazon/iam/ListRoles.html">ListRoles</a>
+    <a href="/amazon/iam/list-roles.html">ListRoles</a>
   </li>
   <li class="tab-amazon-iam-list-server-certificates">
-    <a href="/amazon/iam/ListServerCertificates.html">ListServerCertificates</a>
+    <a href="/amazon/iam/list-server-certificates.html">ListServerCertificates</a>
   </li>
   <li class="tab-amazon-iam-list-signing-certificates">
-    <a href="/amazon/iam/ListSigningCertificates.html">ListSigningCertificates</a>
+    <a href="/amazon/iam/list-signing-certificates.html">ListSigningCertificates</a>
   </li>
   <li class="tab-amazon-iam-list-user-policies">
-    <a href="/amazon/iam/ListUserPolicies.html">ListUserPolicies</a>
+    <a href="/amazon/iam/list-user-policies.html">ListUserPolicies</a>
   </li>
   <li class="tab-amazon-iam-list-users">
-    <a href="/amazon/iam/ListUsers.html">ListUsers</a>
+    <a href="/amazon/iam/list-users.html">ListUsers</a>
   </li>
   <li class="tab-amazon-iam-list-virtual-m-f-a-devices">
-    <a href="/amazon/iam/ListVirtualMFADevices.html">ListVirtualMFADevices</a>
+    <a href="/amazon/iam/list-virtual-m-f-a-devices.html">ListVirtualMFADevices</a>
   </li>
   <li class="tab-amazon-iam-put-group-policy">
-    <a href="/amazon/iam/PutGroupPolicy.html">PutGroupPolicy</a>
+    <a href="/amazon/iam/put-group-policy.html">PutGroupPolicy</a>
   </li>
   <li class="tab-amazon-iam-put-role-policy">
-    <a href="/amazon/iam/PutRolePolicy.html">PutRolePolicy</a>
+    <a href="/amazon/iam/put-role-policy.html">PutRolePolicy</a>
   </li>
   <li class="tab-amazon-iam-put-user-policy">
-    <a href="/amazon/iam/PutUserPolicy.html">PutUserPolicy</a>
+    <a href="/amazon/iam/put-user-policy.html">PutUserPolicy</a>
   </li>
   <li class="tab-amazon-iam-remove-role-from-instance-profile">
-    <a href="/amazon/iam/RemoveRoleFromInstanceProfile.html">RemoveRoleFromInstanceProfile</a>
+    <a href="/amazon/iam/remove-role-from-instance-profile.html">RemoveRoleFromInstanceProfile</a>
   </li>
   <li class="tab-amazon-iam-remove-user-from-group">
-    <a href="/amazon/iam/RemoveUserFromGroup.html">RemoveUserFromGroup</a>
+    <a href="/amazon/iam/remove-user-from-group.html">RemoveUserFromGroup</a>
   </li>
   <li class="tab-amazon-iam-resync-m-f-a-device">
-    <a href="/amazon/iam/ResyncMFADevice.html">ResyncMFADevice</a>
+    <a href="/amazon/iam/resync-m-f-a-device.html">ResyncMFADevice</a>
   </li>
   <li class="tab-amazon-iam-update-access-key">
-    <a href="/amazon/iam/UpdateAccessKey.html">UpdateAccessKey</a>
+    <a href="/amazon/iam/update-access-key.html">UpdateAccessKey</a>
   </li>
   <li class="tab-amazon-iam-update-account-password-policy">
-    <a href="/amazon/iam/UpdateAccountPasswordPolicy.html">UpdateAccountPasswordPolicy</a>
+    <a href="/amazon/iam/update-account-password-policy.html">UpdateAccountPasswordPolicy</a>
   </li>
   <li class="tab-amazon-iam-update-assume-role-policy">
-    <a href="/amazon/iam/UpdateAssumeRolePolicy.html">UpdateAssumeRolePolicy</a>
+    <a href="/amazon/iam/update-assume-role-policy.html">UpdateAssumeRolePolicy</a>
   </li>
   <li class="tab-amazon-iam-update-group">
-    <a href="/amazon/iam/UpdateGroup.html">UpdateGroup</a>
+    <a href="/amazon/iam/update-group.html">UpdateGroup</a>
   </li>
   <li class="tab-amazon-iam-update-login-profile">
-    <a href="/amazon/iam/UpdateLoginProfile.html">UpdateLoginProfile</a>
+    <a href="/amazon/iam/update-login-profile.html">UpdateLoginProfile</a>
   </li>
   <li class="tab-amazon-iam-update-server-certificate">
-    <a href="/amazon/iam/UpdateServerCertificate.html">UpdateServerCertificate</a>
+    <a href="/amazon/iam/update-server-certificate.html">UpdateServerCertificate</a>
   </li>
   <li class="tab-amazon-iam-update-signing-certificate">
-    <a href="/amazon/iam/UpdateSigningCertificate.html">UpdateSigningCertificate</a>
+    <a href="/amazon/iam/update-signing-certificate.html">UpdateSigningCertificate</a>
   </li>
   <li class="tab-amazon-iam-update-user">
-    <a href="/amazon/iam/UpdateUser.html">UpdateUser</a>
+    <a href="/amazon/iam/update-user.html">UpdateUser</a>
   </li>
   <li class="tab-amazon-iam-upload-server-certificate">
-    <a href="/amazon/iam/UploadServerCertificate.html">UploadServerCertificate</a>
+    <a href="/amazon/iam/upload-server-certificate.html">UploadServerCertificate</a>
   </li>
   <li class="tab-amazon-iam-upload-signing-certificate">
-    <a href="/amazon/iam/UploadSigningCertificate.html">UploadSigningCertificate</a>
+    <a href="/amazon/iam/upload-signing-certificate.html">UploadSigningCertificate</a>
   </li>
