--- a/_includes/menu-amazon-imd.html
+++ b/_includes/menu-amazon-imd.html
@@ -1,8 +1,8 @@
   <li><a href="/amazon/">&laquo; back</a></li>
   <li class="tab-amazon-imd nav-header">Amazon IMD</li>
   <li class="tab-amazon-imd-get">
-    <a href="/amazon/imd/Get.html">Get</a>
+    <a href="/amazon/imd/get.html">Get</a>
   </li>
   <li class="tab-amazon-imd-list-api-versions">
-    <a href="/amazon/imd/ListApiVersions.html">ListApiVersions</a>
+    <a href="/amazon/imd/list-api-versions.html">ListApiVersions</a>
   </li>
