--- a/_includes/menu-amazon-s3.html
+++ b/_includes/menu-amazon-s3.html
@@ -1,137 +1,137 @@
   <li><a href="/amazon/">&laquo; back</a></li>
   <li class="tab-amazon-s3 nav-header">Amazon S3</li>
   <li class="tab-amazon-s3-abort-multipart-upload">
-    <a href="/amazon/s3/AbortMultipartUpload.html">AbortMultipartUpload</a>
+    <a href="/amazon/s3/abort-multipart-upload.html">AbortMultipartUpload</a>
   </li>
   <li class="tab-amazon-s3-check-bucket">
-    <a href="/amazon/s3/CheckBucket.html">CheckBucket</a>
+    <a href="/amazon/s3/check-bucket.html">CheckBucket</a>
   </li>
   <li class="tab-amazon-s3-complete-multipart-upload">
-    <a href="/amazon/s3/CompleteMultipartUpload.html">CompleteMultipartUpload</a>
+    <a href="/amazon/s3/complete-multipart-upload.html">CompleteMultipartUpload</a>
   </li>
   <li class="tab-amazon-s3-copy-object">
-    <a href="/amazon/s3/CopyObject.html">CopyObject</a>
+    <a href="/amazon/s3/copy-object.html">CopyObject</a>
   </li>
   <li class="tab-amazon-s3-create-bucket">
-    <a href="/amazon/s3/CreateBucket.html">CreateBucket</a>
+    <a href="/amazon/s3/create-bucket.html">CreateBucket</a>
   </li>
   <li class="tab-amazon-s3-delete-bucket">
-    <a href="/amazon/s3/DeleteBucket.html">DeleteBucket</a>
+    <a href="/amazon/s3/delete-bucket.html">DeleteBucket</a>
   </li>
   <li class="tab-amazon-s3-delete-bucket-lifecycle">
-    <a href="/amazon/s3/DeleteBucketLifecycle.html">DeleteBucketLifecycle</a>
+    <a href="/amazon/s3/delete-bucket-lifecycle.html">DeleteBucketLifecycle</a>
   </li>
   <li class="tab-amazon-s3-delete-bucket-policy">
-    <a href="/amazon/s3/DeleteBucketPolicy.html">DeleteBucketPolicy</a>
+    <a href="/amazon/s3/delete-bucket-policy.html">DeleteBucketPolicy</a>
   </li>
   <li class="tab-amazon-s3-delete-bucket-tagging">
-    <a href="/amazon/s3/DeleteBucketTagging.html">DeleteBucketTagging</a>
+    <a href="/amazon/s3/delete-bucket-tagging.html">DeleteBucketTagging</a>
   </li>
   <li class="tab-amazon-s3-delete-bucket-website">
-    <a href="/amazon/s3/DeleteBucketWebsite.html">DeleteBucketWebsite</a>
+    <a href="/amazon/s3/delete-bucket-website.html">DeleteBucketWebsite</a>
   </li>
   <li class="tab-amazon-s3-delete-multiple-objects">
-    <a href="/amazon/s3/DeleteMultipleObjects.html">DeleteMultipleObjects</a>
+    <a href="/amazon/s3/delete-multiple-objects.html">DeleteMultipleObjects</a>
   </li>
   <li class="tab-amazon-s3-delete-object">
-    <a href="/amazon/s3/DeleteObject.html">DeleteObject</a>
+    <a href="/amazon/s3/delete-object.html">DeleteObject</a>
   </li>
   <li class="tab-amazon-s3-get-bucket-acl">
-    <a href="/amazon/s3/GetBucketAcl.html">GetBucketAcl</a>
+    <a href="/amazon/s3/get-bucket-acl.html">GetBucketAcl</a>
   </li>
   <li class="tab-amazon-s3-get-bucket-lifecycle">
-    <a href="/amazon/s3/GetBucketLifecycle.html">GetBucketLifecycle</a>
+    <a href="/amazon/s3/get-bucket-lifecycle.html">GetBucketLifecycle</a>
   </li>
   <li class="tab-amazon-s3-get-bucket-location">
-    <a href="/amazon/s3/GetBucketLocation.html">GetBucketLocation</a>
+    <a href="/amazon/s3/get-bucket-location.html">GetBucketLocation</a>
   </li>
   <li class="tab-amazon-s3-get-bucket-logging">
-    <a href="/amazon/s3/GetBucketLogging.html">GetBucketLogging</a>
+    <a href="/amazon/s3/get-bucket-logging.html">GetBucketLogging</a>
   </li>
   <li class="tab-amazon-s3-get-bucket-notification">
-    <a href="/amazon/s3/GetBucketNotification.html">GetBucketNotification</a>
+    <a href="/amazon/s3/get-bucket-notification.html">GetBucketNotification</a>
   </li>
   <li class="tab-amazon-s3-get-bucket-object-versions">
-    <a href="/amazon/s3/GetBucketObjectVersions.html">GetBucketObjectVersions</a>
+    <a href="/amazon/s3/get-bucket-object-versions.html">GetBucketObjectVersions</a>
   </li>
   <li class="tab-amazon-s3-get-bucket-policy">
-    <a href="/amazon/s3/GetBucketPolicy.html">GetBucketPolicy</a>
+    <a href="/amazon/s3/get-bucket-policy.html">GetBucketPolicy</a>
   </li>
   <li class="tab-amazon-s3-get-bucket-request-payment">
-    <a href="/amazon/s3/GetBucketRequestPayment.html">GetBucketRequestPayment</a>
+    <a href="/amazon/s3/get-bucket-request-payment.html">GetBucketRequestPayment</a>
   </li>
   <li class="tab-amazon-s3-get-bucket-tagging">
-    <a href="/amazon/s3/GetBucketTagging.html">GetBucketTagging</a>
+    <a href="/amazon/s3/get-bucket-tagging.html">GetBucketTagging</a>
   </li>
   <li class="tab-amazon-s3-get-bucket-versioning">
-    <a href="/amazon/s3/GetBucketVersioning.html">GetBucketVersioning</a>
+    <a href="/amazon/s3/get-bucket-versioning.html">GetBucketVersioning</a>
   </li>
   <li class="tab-amazon-s3-get-bucket-website">
-    <a href="/amazon/s3/GetBucketWebsite.html">GetBucketWebsite</a>
+    <a href="/amazon/s3/get-bucket-website.html">GetBucketWebsite</a>
   </li>
   <li class="tab-amazon-s3-get-object">
-    <a href="/amazon/s3/GetObject.html">GetObject</a>
+    <a href="/amazon/s3/get-object.html">GetObject</a>
   </li>
   <li class="tab-amazon-s3-get-object-acl">
-    <a href="/amazon/s3/GetObjectAcl.html">GetObjectAcl</a>
+    <a href="/amazon/s3/get-object-acl.html">GetObjectAcl</a>
   </li>
   <li class="tab-amazon-s3-get-object-metadata">
-    <a href="/amazon/s3/GetObjectMetadata.html">GetObjectMetadata</a>
+    <a href="/amazon/s3/get-object-metadata.html">GetObjectMetadata</a>
   </li>
   <li class="tab-amazon-s3-get-object-torrent">
-    <a href="/amazon/s3/GetObjectTorrent.html">GetObjectTorrent</a>
+    <a href="/amazon/s3/get-object-torrent.html">GetObjectTorrent</a>
   </li>
   <li class="tab-amazon-s3-initiate-multipart-upload">
-    <a href="/amazon/s3/InitiateMultipartUpload.html">InitiateMultipartUpload</a>
+    <a href="/amazon/s3/initiate-multipart-upload.html">InitiateMultipartUpload</a>
   </li>
   <li class="tab-amazon-s3-list-buckets">
-    <a href="/amazon/s3/ListBuckets.html">ListBuckets</a>
+    <a href="/amazon/s3/list-buckets.html">ListBuckets</a>
   </li>
   <li class="tab-amazon-s3-list-multipart-uploads">
-    <a href="/amazon/s3/ListMultipartUploads.html">ListMultipartUploads</a>
+    <a href="/amazon/s3/list-multipart-uploads.html">ListMultipartUploads</a>
   </li>
   <li class="tab-amazon-s3-list-objects">
-    <a href="/amazon/s3/ListObjects.html">ListObjects</a>
+    <a href="/amazon/s3/list-objects.html">ListObjects</a>
   </li>
   <li class="tab-amazon-s3-list-parts">
-    <a href="/amazon/s3/ListParts.html">ListParts</a>
+    <a href="/amazon/s3/list-parts.html">ListParts</a>
   </li>
   <li class="tab-amazon-s3-put-bucket-acl">
-    <a href="/amazon/s3/PutBucketAcl.html">PutBucketAcl</a>
+    <a href="/amazon/s3/put-bucket-acl.html">PutBucketAcl</a>
   </li>
   <li class="tab-amazon-s3-put-bucket-lifecycle">
-    <a href="/amazon/s3/PutBucketLifecycle.html">PutBucketLifecycle</a>
+    <a href="/amazon/s3/put-bucket-lifecycle.html">PutBucketLifecycle</a>
   </li>
   <li class="tab-amazon-s3-put-bucket-logging">
-    <a href="/amazon/s3/PutBucketLogging.html">PutBucketLogging</a>
+    <a href="/amazon/s3/put-bucket-logging.html">PutBucketLogging</a>
   </li>
   <li class="tab-amazon-s3-put-bucket-notification">
-    <a href="/amazon/s3/PutBucketNotification.html">PutBucketNotification</a>
+    <a href="/amazon/s3/put-bucket-notification.html">PutBucketNotification</a>
   </li>
   <li class="tab-amazon-s3-put-bucket-policy">
-    <a href="/amazon/s3/PutBucketPolicy.html">PutBucketPolicy</a>
+    <a href="/amazon/s3/put-bucket-policy.html">PutBucketPolicy</a>
   </li>
   <li class="tab-amazon-s3-put-bucket-request-payment">
-    <a href="/amazon/s3/PutBucketRequestPayment.html">PutBucketRequestPayment</a>
+    <a href="/amazon/s3/put-bucket-request-payment.html">PutBucketRequestPayment</a>
   </li>
   <li class="tab-amazon-s3-put-bucket-tagging">
-    <a href="/amazon/s3/PutBucketTagging.html">PutBucketTagging</a>
+    <a href="/amazon/s3/put-bucket-tagging.html">PutBucketTagging</a>
   </li>
   <li class="tab-amazon-s3-put-bucket-versioning">
-    <a href="/amazon/s3/PutBucketVersioning.html">PutBucketVersioning</a>
+    <a href="/amazon/s3/put-bucket-versioning.html">PutBucketVersioning</a>
   </li>
   <li class="tab-amazon-s3-put-bucket-website">
-    <a href="/amazon/s3/PutBucketWebsite.html">PutBucketWebsite</a>
+    <a href="/amazon/s3/put-bucket-website.html">PutBucketWebsite</a>
   </li>
   <li class="tab-amazon-s3-put-object">
-    <a href="/amazon/s3/PutObject.html">PutObject</a>
+    <a href="/amazon/s3/put-object.html">PutObject</a>
   </li>
   <li class="tab-amazon-s3-put-object-acl">
-    <a href="/amazon/s3/PutObjectAcl.html">PutObjectAcl</a>
+    <a href="/amazon/s3/put-object-acl.html">PutObjectAcl</a>
   </li>
   <li class="tab-amazon-s3-upload-part">
-    <a href="/amazon/s3/UploadPart.html">UploadPart</a>
+    <a href="/amazon/s3/upload-part.html">UploadPart</a>
   </li>
   <li class="tab-amazon-s3-upload-part-copy">
-    <a href="/amazon/s3/UploadPartCopy.html">UploadPartCopy</a>
+    <a href="/amazon/s3/upload-part-copy.html">UploadPartCopy</a>
   </li>
