--- a/_includes/menu-amazon-sns.html
+++ b/_includes/menu-amazon-sns.html
@@ -1,47 +1,47 @@
   <li><a href="/amazon/">&laquo; back</a></li>
   <li class="tab-amazon-sns nav-header">Amazon SNS</li>
   <li class="tab-amazon-sns-add-permission">
-    <a href="/amazon/sns/AddPermission.html">AddPermission</a>
+    <a href="/amazon/sns/add-permission.html">AddPermission</a>
   </li>
   <li class="tab-amazon-sns-confirm-subscription">
-    <a href="/amazon/sns/ConfirmSubscription.html">ConfirmSubscription</a>
+    <a href="/amazon/sns/confirm-subscription.html">ConfirmSubscription</a>
   </li>
   <li class="tab-amazon-sns-create-topic">
-    <a href="/amazon/sns/CreateTopic.html">CreateTopic</a>
+    <a href="/amazon/sns/create-topic.html">CreateTopic</a>
   </li>
   <li class="tab-amazon-sns-delete-topic">
-    <a href="/amazon/sns/DeleteTopic.html">DeleteTopic</a>
+    <a href="/amazon/sns/delete-topic.html">DeleteTopic</a>
   </li>
   <li class="tab-amazon-sns-get-subscription-attributes">
-    <a href="/amazon/sns/GetSubscriptionAttributes.html">GetSubscriptionAttributes</a>
+    <a href="/amazon/sns/get-subscription-attributes.html">GetSubscriptionAttributes</a>
   </li>
   <li class="tab-amazon-sns-get-topic-attributes">
-    <a href="/amazon/sns/GetTopicAttributes.html">GetTopicAttributes</a>
+    <a href="/amazon/sns/get-topic-attributes.html">GetTopicAttributes</a>
   </li>
   <li class="tab-amazon-sns-list-subscriptions">
-    <a href="/amazon/sns/ListSubscriptions.html">ListSubscriptions</a>
+    <a href="/amazon/sns/list-subscriptions.html">ListSubscriptions</a>
   </li>
   <li class="tab-amazon-sns-list-subscriptions-by-topic">
-    <a href="/amazon/sns/ListSubscriptionsByTopic.html">ListSubscriptionsByTopic</a>
+    <a href="/amazon/sns/list-subscriptions-by-topic.html">ListSubscriptionsByTopic</a>
   </li>
   <li class="tab-amazon-sns-list-topics">
-    <a href="/amazon/sns/ListTopics.html">ListTopics</a>
+    <a href="/amazon/sns/list-topics.html">ListTopics</a>
   </li>
   <li class="tab-amazon-sns-publish">
-    <a href="/amazon/sns/Publish.html">Publish</a>
+    <a href="/amazon/sns/publish.html">Publish</a>
   </li>
   <li class="tab-amazon-sns-remove-permission">
-    <a href="/amazon/sns/RemovePermission.html">RemovePermission</a>
+    <a href="/amazon/sns/remove-permission.html">RemovePermission</a>
   </li>
   <li class="tab-amazon-sns-set-subscription-attributes">
-    <a href="/amazon/sns/SetSubscriptionAttributes.html">SetSubscriptionAttributes</a>
+    <a href="/amazon/sns/set-subscription-attributes.html">SetSubscriptionAttributes</a>
   </li>
   <li class="tab-amazon-sns-set-topic-attributes">
-    <a href="/amazon/sns/SetTopicAttributes.html">SetTopicAttributes</a>
+    <a href="/amazon/sns/set-topic-attributes.html">SetTopicAttributes</a>
   </li>
   <li class="tab-amazon-sns-subscribe">
-    <a href="/amazon/sns/Subscribe.html">Subscribe</a>
+    <a href="/amazon/sns/subscribe.html">Subscribe</a>
   </li>
   <li class="tab-amazon-sns-unsubscribe">
-    <a href="/amazon/sns/Unsubscribe.html">Unsubscribe</a>
+    <a href="/amazon/sns/unsubscribe.html">Unsubscribe</a>
   </li>
