--- a/_includes/menu-amazon-sqs.html
+++ b/_includes/menu-amazon-sqs.html
@@ -1,47 +1,47 @@
   <li><a href="/amazon/">&laquo; back</a></li>
   <li class="tab-amazon-sqs nav-header">Amazon SQS</li>
   <li class="tab-amazon-sqs-add-permission">
-    <a href="/amazon/sqs/AddPermission.html">AddPermission</a>
+    <a href="/amazon/sqs/add-permission.html">AddPermission</a>
   </li>
   <li class="tab-amazon-sqs-change-message-visibility">
-    <a href="/amazon/sqs/ChangeMessageVisibility.html">ChangeMessageVisibility</a>
+    <a href="/amazon/sqs/change-message-visibility.html">ChangeMessageVisibility</a>
   </li>
   <li class="tab-amazon-sqs-change-message-visibility-batch">
-    <a href="/amazon/sqs/ChangeMessageVisibilityBatch.html">ChangeMessageVisibilityBatch</a>
+    <a href="/amazon/sqs/change-message-visibility-batch.html">ChangeMessageVisibilityBatch</a>
   </li>
   <li class="tab-amazon-sqs-create-queue">
-    <a href="/amazon/sqs/CreateQueue.html">CreateQueue</a>
+    <a href="/amazon/sqs/create-queue.html">CreateQueue</a>
   </li>
   <li class="tab-amazon-sqs-delete-message">
-    <a href="/amazon/sqs/DeleteMessage.html">DeleteMessage</a>
+    <a href="/amazon/sqs/delete-message.html">DeleteMessage</a>
   </li>
   <li class="tab-amazon-sqs-delete-message-batch">
-    <a href="/amazon/sqs/DeleteMessageBatch.html">DeleteMessageBatch</a>
+    <a href="/amazon/sqs/delete-message-batch.html">DeleteMessageBatch</a>
   </li>
   <li class="tab-amazon-sqs-delete-queue">
-    <a href="/amazon/sqs/DeleteQueue.html">DeleteQueue</a>
+    <a href="/amazon/sqs/delete-queue.html">DeleteQueue</a>
   </li>
   <li class="tab-amazon-sqs-get-queue-attributes">
-    <a href="/amazon/sqs/GetQueueAttributes.html">GetQueueAttributes</a>
+    <a href="/amazon/sqs/get-queue-attributes.html">GetQueueAttributes</a>
   </li>
   <li class="tab-amazon-sqs-get-queue-url">
-    <a href="/amazon/sqs/GetQueueUrl.html">GetQueueUrl</a>
+    <a href="/amazon/sqs/get-queue-url.html">GetQueueUrl</a>
   </li>
   <li class="tab-amazon-sqs-list-queues">
-    <a href="/amazon/sqs/ListQueues.html">ListQueues</a>
+    <a href="/amazon/sqs/list-queues.html">ListQueues</a>
   </li>
   <li class="tab-amazon-sqs-receive-message">
-    <a href="/amazon/sqs/ReceiveMessage.html">ReceiveMessage</a>
+    <a href="/amazon/sqs/receive-message.html">ReceiveMessage</a>
   </li>
   <li class="tab-amazon-sqs-remove-permission">
-    <a href="/amazon/sqs/RemovePermission.html">RemovePermission</a>
+    <a href="/amazon/sqs/remove-permission.html">RemovePermission</a>
   </li>
   <li class="tab-amazon-sqs-send-message">
-    <a href="/amazon/sqs/SendMessage.html">SendMessage</a>
+    <a href="/amazon/sqs/send-message.html">SendMessage</a>
   </li>
   <li class="tab-amazon-sqs-send-message-batch">
-    <a href="/amazon/sqs/SendMessageBatch.html">SendMessageBatch</a>
+    <a href="/amazon/sqs/send-message-batch.html">SendMessageBatch</a>
   </li>
   <li class="tab-amazon-sqs-set-queue-attributes">
-    <a href="/amazon/sqs/SetQueueAttributes.html">SetQueueAttributes</a>
+    <a href="/amazon/sqs/set-queue-attributes.html">SetQueueAttributes</a>
   </li>
