--- a/_includes/menu-amazon-swf.html
+++ b/_includes/menu-amazon-swf.html
@@ -1,95 +1,95 @@
   <li><a href="/amazon/">&laquo; back</a></li>
   <li class="tab-amazon-swf nav-header">Amazon SWF</li>
   <li class="tab-amazon-swf-count-closed-workflow-executions">
-    <a href="/amazon/swf/CountClosedWorkflowExecutions.html">CountClosedWorkflowExecutions</a>
+    <a href="/amazon/swf/count-closed-workflow-executions.html">CountClosedWorkflowExecutions</a>
   </li>
   <li class="tab-amazon-swf-count-open-workflow-executions">
-    <a href="/amazon/swf/CountOpenWorkflowExecutions.html">CountOpenWorkflowExecutions</a>
+    <a href="/amazon/swf/count-open-workflow-executions.html">CountOpenWorkflowExecutions</a>
   </li>
   <li class="tab-amazon-swf-count-pending-activity-tasks">
-    <a href="/amazon/swf/CountPendingActivityTasks.html">CountPendingActivityTasks</a>
+    <a href="/amazon/swf/count-pending-activity-tasks.html">CountPendingActivityTasks</a>
   </li>
   <li class="tab-amazon-swf-count-pending-decision-tasks">
-    <a href="/amazon/swf/CountPendingDecisionTasks.html">CountPendingDecisionTasks</a>
+    <a href="/amazon/swf/count-pending-decision-tasks.html">CountPendingDecisionTasks</a>
   </li>
   <li class="tab-amazon-swf-deprecate-activity-type">
-    <a href="/amazon/swf/DeprecateActivityType.html">DeprecateActivityType</a>
+    <a href="/amazon/swf/deprecate-activity-type.html">DeprecateActivityType</a>
   </li>
   <li class="tab-amazon-swf-deprecate-domain">
-    <a href="/amazon/swf/DeprecateDomain.html">DeprecateDomain</a>
+    <a href="/amazon/swf/deprecate-domain.html">DeprecateDomain</a>
   </li>
   <li class="tab-amazon-swf-deprecate-workflow-type">
-    <a href="/amazon/swf/DeprecateWorkflowType.html">DeprecateWorkflowType</a>
+    <a href="/amazon/swf/deprecate-workflow-type.html">DeprecateWorkflowType</a>
   </li>
   <li class="tab-amazon-swf-describe-activity-type">
-    <a href="/amazon/swf/DescribeActivityType.html">DescribeActivityType</a>
+    <a href="/amazon/swf/describe-activity-type.html">DescribeActivityType</a>
   </li>
   <li class="tab-amazon-swf-describe-domain">
-    <a href="/amazon/swf/DescribeDomain.html">DescribeDomain</a>
+    <a href="/amazon/swf/describe-domain.html">DescribeDomain</a>
   </li>
   <li class="tab-amazon-swf-describe-workflow-execution">
-    <a href="/amazon/swf/DescribeWorkflowExecution.html">DescribeWorkflowExecution</a>
+    <a href="/amazon/swf/describe-workflow-execution.html">DescribeWorkflowExecution</a>
   </li>
   <li class="tab-amazon-swf-describe-workflow-type">
-    <a href="/amazon/swf/DescribeWorkflowType.html">DescribeWorkflowType</a>
+    <a href="/amazon/swf/describe-workflow-type.html">DescribeWorkflowType</a>
   </li>
   <li class="tab-amazon-swf-get-workflow-execution-history">
-    <a href="/amazon/swf/GetWorkflowExecutionHistory.html">GetWorkflowExecutionHistory</a>
+    <a href="/amazon/swf/get-workflow-execution-history.html">GetWorkflowExecutionHistory</a>
   </li>
   <li class="tab-amazon-swf-list-activity-types">
-    <a href="/amazon/swf/ListActivityTypes.html">ListActivityTypes</a>
+    <a href="/amazon/swf/list-activity-types.html">ListActivityTypes</a>
   </li>
   <li class="tab-amazon-swf-list-closed-workflow-executions">
-    <a href="/amazon/swf/ListClosedWorkflowExecutions.html">ListClosedWorkflowExecutions</a>
+    <a href="/amazon/swf/list-closed-workflow-executions.html">ListClosedWorkflowExecutions</a>
   </li>
   <li class="tab-amazon-swf-list-domains">
-    <a href="/amazon/swf/ListDomains.html">ListDomains</a>
+    <a href="/amazon/swf/list-domains.html">ListDomains</a>
   </li>
   <li class="tab-amazon-swf-list-open-workflow-executions">
-    <a href="/amazon/swf/ListOpenWorkflowExecutions.html">ListOpenWorkflowExecutions</a>
+    <a href="/amazon/swf/list-open-workflow-executions.html">ListOpenWorkflowExecutions</a>
   </li>
   <li class="tab-amazon-swf-list-workflow-types">
-    <a href="/amazon/swf/ListWorkflowTypes.html">ListWorkflowTypes</a>
+    <a href="/amazon/swf/list-workflow-types.html">ListWorkflowTypes</a>
   </li>
   <li class="tab-amazon-swf-poll-for-activity-task">
-    <a href="/amazon/swf/PollForActivityTask.html">PollForActivityTask</a>
+    <a href="/amazon/swf/poll-for-activity-task.html">PollForActivityTask</a>
   </li>
   <li class="tab-amazon-swf-poll-for-decision-task">
-    <a href="/amazon/swf/PollForDecisionTask.html">PollForDecisionTask</a>
+    <a href="/amazon/swf/poll-for-decision-task.html">PollForDecisionTask</a>
   </li>
   <li class="tab-amazon-swf-record-activity-task-heartbeat">
-    <a href="/amazon/swf/RecordActivityTaskHeartbeat.html">RecordActivityTaskHeartbeat</a>
+    <a href="/amazon/swf/record-activity-task-heartbeat.html">RecordActivityTaskHeartbeat</a>
   </li>
   <li class="tab-amazon-swf-register-activity-type">
-    <a href="/amazon/swf/RegisterActivityType.html">RegisterActivityType</a>
+    <a href="/amazon/swf/register-activity-type.html">RegisterActivityType</a>
   </li>
   <li class="tab-amazon-swf-register-domain">
-    <a href="/amazon/swf/RegisterDomain.html">RegisterDomain</a>
+    <a href="/amazon/swf/register-domain.html">RegisterDomain</a>
   </li>
   <li class="tab-amazon-swf-register-workflow-type">
-    <a href="/amazon/swf/RegisterWorkflowType.html">RegisterWorkflowType</a>
+    <a href="/amazon/swf/register-workflow-type.html">RegisterWorkflowType</a>
   </li>
   <li class="tab-amazon-swf-request-cancel-workflow-execution">
-    <a href="/amazon/swf/RequestCancelWorkflowExecution.html">RequestCancelWorkflowExecution</a>
+    <a href="/amazon/swf/request-cancel-workflow-execution.html">RequestCancelWorkflowExecution</a>
   </li>
   <li class="tab-amazon-swf-respond-activity-task-canceled">
-    <a href="/amazon/swf/RespondActivityTaskCanceled.html">RespondActivityTaskCanceled</a>
+    <a href="/amazon/swf/respond-activity-task-canceled.html">RespondActivityTaskCanceled</a>
   </li>
   <li class="tab-amazon-swf-respond-activity-task-completed">
-    <a href="/amazon/swf/RespondActivityTaskCompleted.html">RespondActivityTaskCompleted</a>
+    <a href="/amazon/swf/respond-activity-task-completed.html">RespondActivityTaskCompleted</a>
   </li>
   <li class="tab-amazon-swf-respond-activity-task-failed">
-    <a href="/amazon/swf/RespondActivityTaskFailed.html">RespondActivityTaskFailed</a>
+    <a href="/amazon/swf/respond-activity-task-failed.html">RespondActivityTaskFailed</a>
   </li>
   <li class="tab-amazon-swf-respond-decision-task-completed">
-    <a href="/amazon/swf/RespondDecisionTaskCompleted.html">RespondDecisionTaskCompleted</a>
+    <a href="/amazon/swf/respond-decision-task-completed.html">RespondDecisionTaskCompleted</a>
   </li>
   <li class="tab-amazon-swf-signal-workflow-execution">
-    <a href="/amazon/swf/SignalWorkflowExecution.html">SignalWorkflowExecution</a>
+    <a href="/amazon/swf/signal-workflow-execution.html">SignalWorkflowExecution</a>
   </li>
   <li class="tab-amazon-swf-start-workflow-execution">
-    <a href="/amazon/swf/StartWorkflowExecution.html">StartWorkflowExecution</a>
+    <a href="/amazon/swf/start-workflow-execution.html">StartWorkflowExecution</a>
   </li>
   <li class="tab-amazon-swf-terminate-workflow-execution">
-    <a href="/amazon/swf/TerminateWorkflowExecution.html">TerminateWorkflowExecution</a>
+    <a href="/amazon/swf/terminate-workflow-execution.html">TerminateWorkflowExecution</a>
   </li>
