--- a/_includes/menu-index.html
+++ b/_includes/menu-index.html
@@ -8,32 +8,32 @@
   <li class="tab-amazon nav-header">Web Services</li>
   <li class="tab-amazon"><a href="/amazon/">Amazon</a>
     <ul>
-      <li class="tab-amazon-s3"><a href="/amazon/s3/">Simple Storage Service (S3)</a></li>
-      <li class="tab-amazon-ec2"><a href="/amazon/ec2/">Elastic Compute Cloud (EC2)</a></li>
+      <li class="tab-amazon-autoscaling"><a href="/amazon/autoscaling/">AutoScaling</a></li>
+      <li class="tab-amazon-cloudformation"><a href="/amazon/cloudformation/">CloudFormation</a></li>
+      <li class="tab-amazon-cloudfront"><a href="/amazon/cloudfront/">CloudFront</a></li>
+      <li class="tab-amazon-cloudsearch"><a href="/amazon/cloudsearch/">CloudSearch</a></li>
+      <li class="tab-amazon-cloudwatch"><a href="/amazon/cloudwatch/">CloudWatch</a></li>
+      <li class="tab-amazon-dynamodb"><a href="/amazon/dynamodb/">DynamoDB</a></li>
+      <li class="tab-amazon-ec2"><a href="/amazon/ec2/">EC2</a></li>
+      <li class="tab-amazon-elasticache"><a href="/amazon/elasticache/">ElastiCache</a></li>
+      <li class="tab-amazon-elasticbeanstalk"><a href="/amazon/elasticbeanstalk/">ElasticBeanstalk</a></li>
+      <li class="tab-amazon-elb"><a href="/amazon/elb/">ELB</a></li>
+      <li class="tab-amazon-emr"><a href="/amazon/emr/">EMR</a></li>
+      <li class="tab-amazon-fps"><a href="/amazon/fps/">FPS</a></li>
+      <li class="tab-amazon-glacier"><a href="/amazon/glacier/">Glacier</a></li>
+      <li class="tab-amazon-iam"><a href="/amazon/iam/">IAM</a></li>
+      <li class="tab-amazon-imd"><a href="/amazon/imd/">IMD</a></li>
+      <li class="tab-amazon-importexport"><a href="/amazon/importexport/">ImportExport</a></li>
+      <li class="tab-amazon-rds"><a href="/amazon/rds/">RDS</a></li>
+      <li class="tab-amazon-route53"><a href="/amazon/route53/">Route53</a></li>
+      <li class="tab-amazon-s3"><a href="/amazon/s3/">S3</a></li>
+      <li class="tab-amazon-ses"><a href="/amazon/ses/">SES</a></li>
       <li class="tab-amazon-simpledb"><a href="/amazon/simpledb/">SimpleDB</a></li>
-        <!--
-      <li class="tab-amazon-emr"><a href="amazon-emr.html">Elastic MapReduce (EMR)</a>
-
-      <li class="tab-amazon-sqs"><a href="amazon-sqs.html">Simple Queue Service (SQS)</a>
-      <li class="tab-amazon-sns"><a href="amazon-sns.html">Simple Notification Service (SNS)</a>
-      <li class="tab-amazon-ses"><a href="amazon-ses.html">Simple Email Service (SES)</a>
-      <li class="tab-amazon-route53"><a href="amazon-route53.html">Route53</a>
-      <li class="tab-amazon-elasticache"><a href="amazon-elasticache.html">ElastiCache</a>
-      <li class="tab-amazon-cloudfront"><a href="amazon-cloudfront.html">CloudFront</a>
-      <li class="tab-amazon-elb"><a href="amazon-elb.html">Elastic Load Balancing (ELB)</a>
-      <li class="tab-amazon-dynamodb"><a href="amazon-dynamodb.html">DynamoDB</a>
-      <li class="tab-amazon-swf"><a href="amazon-swf.html">Simple Workflow Service (SWF)</a>
-      <li class="tab-amazon-fps"><a href="amazon-fps.html">Flexible Payments Service (FPS)</a>
-      <li class="tab-amazon-cloudwatch"><a href="amazon-cloudwatch.html">CloudWatch</a>
-      <li class="tab-amazon-iam"><a href="amazon-iam.html">Identity and Access Management (IAM)</a>
-      <li class="tab-amazon-rds"><a href="amazon-rds.html">Relational Database Service (RDS)</a>
-      <li class="tab-amazon-imd"><a href="amazon-imd.html">Instance Metadata (IMD)</a>
-      <li class="tab-amazon-elasticbeanstalk"><a href="amazon-elasticbeanstalk.html">ElasticBeanstalk</a>
-      <li class="tab-amazon-autoscaling"><a href="amazon-autoscaling.html">AutoScaling</a>
-      <li class="tab-amazon-importexport"><a href="amazon-importexport.html">Import/Export</a>
-      <li class="tab-amazon-storagegateway"><a href="amazon-storagegateway.html">Storage Gateway</a>
-      <li class="tab-amazon-cloudsearch"><a href="amazon-cloudsearch.html">CloudSearch</a>
-        -->
+      <li class="tab-amazon-sns"><a href="/amazon/sns/">SNS</a></li>
+      <li class="tab-amazon-sqs"><a href="/amazon/sqs/">SQS</a></li>
+      <li class="tab-amazon-storagegateway"><a href="/amazon/storagegateway/">StorageGateway</a></li>
+      <li class="tab-amazon-sts"><a href="/amazon/sts/">STS</a></li>
+      <li class="tab-amazon-swf"><a href="/amazon/swf/">SWF</a></li>
     </ul>
   </li>
 
